--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
         </nav>
     </header>
-    <section>
+    <div class="container logo justify-content-center align-items-center d-flex">
         <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
-    </section>
+    </div>
     <section>
         <div class="main-page">
             <h1 class="h1"> Why I love writing </h1>
