--- a/preview.html
+++ b/preview.html
@@ -59,7 +59,7 @@
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/sfexa.jpg" id="sfexa" alt="street fighter ex box art" class="img-fluid">
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>The graphics are nothing special nowadays but they still hold up and have moments of
                     charm
                     and character to them, the
@@ -108,7 +108,7 @@
                 <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
                 <h6 class="h6">Date Reviewed - 06/06/2022</h6>
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>I want to go more into the fighting as that is what you will be doing for most of
                     your
                     time
@@ -200,7 +200,7 @@
                 <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>I've recently purchased a copy of this fantastic early Fire Emblem title, The
                     vintage
                     does
@@ -249,7 +249,7 @@
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/hp-box.jfif" id="hp" alt="Harmful Park box art" class="image-thumbnail">
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>Yet Another import Japanese exclusive and one I sadly don't own a physical copy of
                     but
                     Iinstead saved hundreds of
@@ -279,7 +279,7 @@
                 <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>This compilation is full of classic Konami arcade Shmup's plus Haunted Castle ....
                     which is a
                     pretty terrible
@@ -319,7 +319,7 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="preview-text-1 col-12">
+            <div class="preview-text-1 col-12 preview-text-2">
                 <h2 class="h2">Halloween Geek Out - Baroque</h2>
                 <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2
                 </h6>
