--- a/subscribe.html
+++ b/subscribe.html
@@ -48,36 +48,33 @@
             </div>
         </nav>
     </header>
-    <section id="logo-section">
-        <div>
-            <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
-        </div>
-    </section>
+    <div class="container logo justify-content-center align-items-center d-flex">
+        <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
+    </div>
     <section id="form-section">
         <!--https://blog.hubspot.com/website/html-text-box-->
-        <div class="form bg-image opacity-50" style="background-image: url('assets/images/medleygames1.jpg');
-                    height:100%;">
+        <div class="form" style="background-image: url('assets/images/medleygames1.jpg');">
             <form id="subscribe-form">
-                <div class="form-row">
+                <div class="form-row form-control">
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname" required>
                 </div>
-                <div class="form-row">
+                <div class="form-row form-control">
                     <label for="lname">Last name:</label>
                     <input type="text" id="lname" name="lname" required>
                 </div>
-                <div class="form-row">
+                <div class="form-row form-control">
                     <label for="email">Email Address:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-                <div class="form-row">
+                <div class="form-row form-control">
                     <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
                 </div>
                 <div class="form-row">
                     <textarea id="suggestion-box" name="suggestion-box" rows="6" cols="100"> </textarea>
                 </div>
                 <!-- Trigger/Open The Modal -->
-                <button id="myBtn">Subscribe!</button>
+                <button id="myBtn btn btn-secondary">Subscribe!</button>
             </form>
         </div>
 
