--- a/preview.html
+++ b/preview.html
@@ -19,7 +19,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/favicon-color.png" class="favicon"></img>
+                <img src="assets/images/android-chrome-512x512.png" class="favicon">
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
