add change to favicon

--- a/preview.html
+++ b/preview.html
@@ -11,6 +11,7 @@
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
 </head>
 
@@ -19,7 +20,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/android-chrome-512x512.png" class="favicon">
+                <img src="assets/images/favicon-color.png" class="favicon">
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
