--- a/subscribe.html
+++ b/subscribe.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/android-chrome-512x512.png" class="favicon">
+                <img src="assets/images/favicon-color.png" class="favicon">
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -55,19 +56,19 @@
         <!--https://blog.hubspot.com/website/html-text-box-->
         <div class="form" style="background-image: url('assets/images/medleygames1.jpg');">
             <form id="subscribe-form">
-                <div class="form-row form-control">
+                <div class="form-row">
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname" required>
                 </div>
-                <div class="form-row form-control">
+                <div class="form-row">
                     <label for="lname">Last name:</label>
                     <input type="text" id="lname" name="lname" required>
                 </div>
-                <div class="form-row form-control">
+                <div class="form-row">
                     <label for="email">Email Address:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-                <div class="form-row form-control">
+                <div class="form-row">
                     <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
                 </div>
                 <div class="form-row">
