add changes to subscribe HTML

--- a/subscribe.html
+++ b/subscribe.html
@@ -57,16 +57,16 @@
         <div class="form" style="background-image: url('assets/images/medleygames1.jpg');">
             <form id="subscribe-form">
                 <div class="form-row">
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" required>
+                    <label for="fname" >First name:</label>
+                    <input type="text" class="form-control " id="fname" name="fname" placeholder="First Name...." required>
                 </div>
                 <div class="form-row">
                     <label for="lname">Last name:</label>
-                    <input type="text" id="lname" name="lname" required>
+                    <input type="text" class="form-control " id="lname" name="lname" placeholder="Last Name...." required>
                 </div>
                 <div class="form-row">
                     <label for="email">Email Address:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email Address...." required>
                 </div>
                 <div class="form-row">
                     <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
@@ -75,7 +75,7 @@
                     <textarea id="suggestion-box" name="suggestion-box" rows="6" cols="100"> </textarea>
                 </div>
                 <!-- Trigger/Open The Modal -->
-                <button id="myBtn btn btn-secondary">Subscribe!</button>
+                <button id="myBtn" class="btn btn-secondary">Subscribe!</button>
             </form>
         </div>
 
