--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" id="home" aria-current="page" href="index.html"><i
-                                    class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
+                                    class="fa-solid fa-ghost" id="ghost-1" style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="preview" aria-current="page" href="preview.html"><i
-                                    class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
+                                    class="fa-solid fa-ghost" id="ghost-2" style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="subscribe" aria-current="page" href="subscribe.html"><i
-                                    class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
+                                    class="fa-solid fa-ghost" id="ghost-3" style="color: #ff97d0;"></i>Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -134,12 +134,12 @@
 
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+        <div class="text-center p-3" id="footer">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
                 href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
-                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+                <i class="fa-brands fa-github"></i>
         </div>
         <!-- Copyright -->
     </footer>
