--- a/preview.html
+++ b/preview.html
@@ -31,15 +31,15 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" id="home" aria-current="page" href="index.html">
-                                <i class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
+                                <i class="fa-solid fa-ghost" style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active " id="preview" aria-current="page" href="preview.html">
-                                <i class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
+                                <i class="fa-solid fa-ghost" style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " id="subscribe" aria-current="page" href="subscribe.html">
-                                <i class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
+                                <i class="fa-solid fa-ghost" style="color: #ff97d0;"></i>Subscribe</a>
 
                         </li>
                     </ul>
@@ -367,12 +367,12 @@
 
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+        <div class="text-center p-3" id="footer">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
                 href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
-                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+                <i class="fa-brands fa-github"></i>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
