--- a/subscribe.html
+++ b/subscribe.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
-        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
@@ -57,16 +57,19 @@
         <div class="form" style="background-image: url('assets/images/medleygames1.jpg');">
             <form id="subscribe-form">
                 <div class="form-row">
-                    <label for="fname" >First name:</label>
-                    <input type="text" class="form-control " id="fname" name="fname" placeholder="First Name...." required>
+                    <label for="fname">First name:</label>
+                    <input type="text" class="form-control " id="fname" name="fname" placeholder="First Name...."
+                        required>
                 </div>
                 <div class="form-row">
                     <label for="lname">Last name:</label>
-                    <input type="text" class="form-control " id="lname" name="lname" placeholder="Last Name...." required>
+                    <input type="text" class="form-control " id="lname" name="lname" placeholder="Last Name...."
+                        required>
                 </div>
                 <div class="form-row">
                     <label for="email">Email Address:</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email Address...." required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email Address...."
+                        required>
                 </div>
                 <div class="form-row">
                     <label for="suggestion-box">Share your thoughts or ideas for articles!</label>
@@ -98,14 +101,13 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center text-lg-start" id="footer">
+    <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+        <div class="text-center p-3" id="footer">
             © 2023 Copyright: Oni Neko Gamer
-            <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-            <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
-            <i class="fa-brands fa-github" style="color:#61777f;"></i>
+        <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
+        <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+            <i class="fa-brands fa-github"></i>
         </div>
         <!-- Copyright -->
 
