add changes to preview text layout on mobile devices

--- a/preview.html
+++ b/preview.html
@@ -11,7 +11,7 @@
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
-        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
 </head>
 
@@ -104,12 +104,12 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="preview-text-1 col-12">
+            <div class="preview-text-1 col-12 order-0">
                 <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
                 <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
                 <h6 class="h6">Date Reviewed - 06/06/2022</h6>
             </div>
-            <div class="col-md-8 col-12 preview-text-2">
+            <div class="col-md-8 col-12 preview-text-2 order-2 order-md-1">
                 <p>I want to go more into the fighting as that is what you will be doing for most of
                     your
                     time
@@ -145,9 +145,9 @@
                     know is
                     that you can find a Sega SG-1000 and that's pretty rad.</p>
             </div>
-            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex order-1 order-md-2">
                 <img src="assets/images/fotnlp-box.jpg" id="fotnlp" alt="fist of the north star box art"
-                    class="image-thumbnail-right">
+                    class="image-thumbnail">
             </div>
         </div>
     </section>
@@ -197,11 +197,11 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="preview-text-1 col-12">
+            <div class="preview-text-1 col-12 order-0">
                 <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-8 col-12 preview-text-2">
+            <div class="col-md-8 col-12 preview-text-2 order-2 order-md-1">
                 <p>I've recently purchased a copy of this fantastic early Fire Emblem title, The
                     vintage
                     does
@@ -235,9 +235,8 @@
                     I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies.
                     I'll be writing an article on this fantastic SRPG in the near future.</p>
             </div>
-            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/ffg-box.jfif" id="ffg" alt="fire emblem gaiden box art"
-                    class="image-thumbnail-right">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex order-1 order-md-2">
+                <img src="assets/images/ffg-box.jfif" id="ffg" alt="fire emblem gaiden box art" class="image-thumbnail">
             </div>
         </div>
     </section>
@@ -275,12 +274,12 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="preview-text-1 col-12">
+            <div class="preview-text-1 col-12 order-0">
                 <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
                 <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-8 col-12 preview-text-2">
+            <div class="col-md-8 col-12 preview-text-2 order-2 order-md-1">
                 <p>This compilation is full of classic Konami arcade Shmup's plus Haunted Castle ....
                     which is a
                     pretty terrible
@@ -312,9 +311,9 @@
                     playing
                     it.</p>
             </div>
-            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex order-1 order-md-2">
                 <img src="assets/images/konami-box.jfif" id="konami" alt="Konami arcade box art"
-                    class="image-thumbnail-right">
+                    class="image-thumbnail">
             </div>
         </div>
     </section>
