add changes to improve layout

--- a/preview.html
+++ b/preview.html
@@ -20,8 +20,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/favicon-color.png" class="favicon">
-                <a class="navbar-brand" href="index.html">Oni Neko Gamer - Preview</a>
+                <img src="assets/images/favicon-color.png" class="favicon" alt="small image of the sites logo">
+                <a class="navbar-brand" href="index.html">Oni Neko Gamer-Preview</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -319,7 +319,7 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="preview-text-1 col-12 preview-text-2">
+            <div class="preview-text-1 col-12">
                 <h2 class="h2">Halloween Geek Out - Baroque</h2>
                 <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2
                 </h6>
@@ -328,7 +328,7 @@
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/baroque-box.jfif" id="baroque" alt="Baroque box art" class="image-thumbnail">
             </div>
-            <div class="col-md-8 col-12">
+            <div class="col-md-8 col-12 preview-text-2">
                 <p>Baroque is a truly unique experience with wonderful world building and a host of
                     strange
                     characters all with their own
@@ -359,10 +359,10 @@
             </div>
         </div>
     </section>
-    <section class="container">
+    <div class="container">
         <img src="assets/images/arcade-stick.jpg" class="arcade"
             alt="An image of an arcade stick with games on top of it">
-    </section>
+    </div>
 
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
@@ -370,7 +370,7 @@
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
                 <i class="fa-brands fa-github"></i>
         </div>
     </footer>
