--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/favicon-color.png" class="favicon">
-                <a class="navbar-brand" href="index.html">Oni Neko Gamer - Home</a>
+                <img src="assets/images/favicon-color.png" class="favicon" alt="small image of the sites logo">
+                <a class="navbar-brand" href="index.html">Oni Neko Gamer-Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation ">
@@ -138,7 +138,7 @@
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
                 <i class="fa-brands fa-github"></i>
         </div>
         <!-- Copyright -->
