--- a/subscribe.html
+++ b/subscribe.html
@@ -23,8 +23,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/favicon-color.png" class="favicon">
-                <a class="navbar-brand" href="index.html">Oni Neko Gamer - Subscribe</a>
+                <img src="assets/images/favicon-color.png" class="favicon" alt="small image of the sites logo">
+                <a class="navbar-brand" href="index.html">Oni Neko Gamer-Subscribe</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
     <div class="container logo justify-content-center align-items-center d-flex">
         <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
     </div>
-    <section id="form-section">
+    <div id="form-section">
         <!--https://blog.hubspot.com/website/html-text-box-->
         <div class="form" style="background-image: url('assets/images/medleygames1.jpg');">
             <form id="subscribe-form">
@@ -82,7 +82,7 @@
             </form>
         </div>
 
-    </section>
+    </div>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -106,7 +106,7 @@
         <div class="text-center p-3" id="footer">
             © 2023 Copyright: Oni Neko Gamer
         <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-        <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+        <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
             <i class="fa-brands fa-github"></i>
         </div>
         <!-- Copyright -->
