--- a/preview.html
+++ b/preview.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Oni Neko Gamer</title>
+    <title>Oni Neko Gamer - Preview</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
 </head>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <img src="assets/images/favicon-color.png" class="favicon" alt="small image of the sites logo">
-                <a class="navbar-brand" href="index.html">Oni Neko Gamer-Preview</a>
+                <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
