fixed octocat no longer working as link

--- a/subscribe.html
+++ b/subscribe.html
@@ -106,8 +106,9 @@
         <div class="text-center p-3" id="footer">
             © 2023 Copyright: Oni Neko Gamer
         <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-        <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
-            <i class="fa-brands fa-github"></i>
+        <a class="github-socials" target="_blank" 
+        href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"><i class="fa-brands fa-github"></i></a>
+           
         </div>
         <!-- Copyright -->
 
