--- a/preview.html
+++ b/preview.html
@@ -370,8 +370,8 @@
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
-                <i class="fa-brands fa-github"></i>
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"><i class="fa-brands fa-github"></i></a>
+                
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
